# kaggle_ml_tutorial

./: .gitignore  README.md  pyproject.toml
kaggle_tutor/notebooks/: model_validation.ipynb  random_forest.ipynb  start.ipynb  underfitting_and_overfitting.ipynb
tests/: test_kaggle_tutor.py
