[tool.poetry]
name = "kaggle_tutor"
version = "0.1.0"
description = ""
authors = ["tainakag"]

[tool.poetry.scripts]
test = "kaggle_tutor.main:main"

[tool.poetry.dependencies]
python = "3.7.6"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
jupyter = "^1.0.0"
pandas = "^1.3.3"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
